Ensure that the open gl context is current in the DXVA decoder while processing configuration changes.

This should hopefully fix the DCHECK's which fire for a valid fence when the picture buffers are being torn down.

BUG=600323

Review URL: https://codereview.chromium.org/1861483004

Cr-Commit-Position: refs/heads/master@{#385070}